--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <nav class="navbar">
                 <ul>
-                    <li><a href="Mylove.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Memories.html">Memories</a></li>
                     <li><a href="Messages.html">Messages</a></li>
                 </ul>
