--- a/Messages.html
+++ b/Messages.html
@@ -10,7 +10,7 @@
         <header>
             <nav class="navbar">
                 <ul>
-                    <li><a href="Mylove.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Memories.html">Memories</a></li>
                     <li><a href="">Messages</a></li>
                 </ul>
