--- a/Messages.html
+++ b/Messages.html
@@ -12,7 +12,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Memories.html">Memories</a></li>
-                    <li><a href="">Messages</a></li>
+                    <li><a href="Messages.html">Messages</a></li>
                 </ul>
             </nav>
         </header>
