--- a/Messages.html
+++ b/Messages.html
@@ -19,6 +19,7 @@
         </header>
 
         <main>
+         <audio src="Zack Tabudlo - Diving (Official Music Video).mp3" autoplay>
          <h1>Messages</h1>
          <hr>
 
