--- a/Messages.html
+++ b/Messages.html
@@ -19,7 +19,11 @@
         </header>
 
         <main>
-         <audio src="Zack Tabudlo - Diving (Official Music Video).mp3" autoplay>
+            <audio autoplay loop>
+              <source src="Zack Tabudlo - Diving (Official Music Video).mp3" type="audio/mpeg">
+              Your browser does not support the audio element.
+            </audio>
+         
          <h1>Messages</h1>
          <hr>
 
