--- a/Memories.html
+++ b/Memories.html
@@ -19,6 +19,10 @@
         </header>
 
         <main>
+            <audio autoplay loop>
+              <source src="Zack Tabudlo - Diving (Official Music Video).mp3" type="audio/mpeg">
+              Your browser does not support the audio element.
+            </audio>
             <h1>Memories</h1>
             <hr>
 
